tf/demo1/main.tf
# demo content ...

terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
    }
  }
}

provider "aws" {
  #access_key = var.access_key
  #secret_key = var.secret_key
  region = "eu-west-1"
}

resource "aws_security_group" "vra-tf-demo-sg" {
  name = "vra-tf-demo-sg"
  description = "Demo SG created by VMware vRealize Automation"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }    

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
